src/css/custom.css
/* ... */
.navbar__items.navbar__items--right>div:first-child>button.clean-btn svg {
  display: none;
}

.navbar__items.navbar__items--right>div:first-child>button.clean-btn {
  background-image: url(/static/img/toggleModeLight.svg);
  border-radius: 48px;
  background-repeat: no-repeat;
  background-position: center;
  transition: background-color 300ms ease-in-out;
  background-color: var(--ifm-color-home-elevation-01);
}

.navbar__items.navbar__items--right>div:first-child>button.clean-btn:hover,
.navbar__items.navbar__items--right>div:first-child>button.clean-btn:active {
  background-color: var(--ifm-color-home-elevation-02);
}

[data-theme='dark'] .navbar__items.navbar__items--right>div:first-child>button.clean-btn {
  background-image: url(/static/img/toggleModeDark.svg);
  background-color: var(--ifm-color-home-elevation-03);
}

[data-theme='dark'] .navbar__items.navbar__items--right>div:first-child>button.clean-btn:hover,
[data-theme='dark'] .navbar__items.navbar__items--right>div:first-child>button.clean-btn:active {
  background-color: var(--ifm-color-home-elevation-04);
}

/* Sidebar Toggle color mode icon */
.navbar-sidebar__brand>div {
  display: none !important;
}

/* Sidebar close icon */
button.clean-btn.navbar-sidebar__close {
  width: 3rem;
  height: 3rem;
  background-image: url(/static/img/closeLight.svg);
  border-radius: 48px;
  background-repeat: no-repeat;
  background-position: center;
  transition: background-color 300ms ease-in-out;
  background-color: var(--ifm-color-home-elevation-01);
}

button.clean-btn.navbar-sidebar__close:hover,
button.clean-btn.navbar-sidebar__close:active,
button.clean-btn.navbar-sidebar__close:focus {
  background-color: var(--ifm-color-home-elevation-02);
}

button.clean-btn.navbar-sidebar__close>svg {
  display: none;
}

[data-theme='dark'] button.clean-btn.navbar-sidebar__close {
  background-image: url(/static/img/closeDark.svg);
}

[data-theme='dark'] button.clean-btn.navbar-sidebar__close:hover,
[data-theme='dark'] button.clean-btn.navbar-sidebar__close:active {
  background-color: var(--ifm-color-home-elevation-04);
}

/* Sidebar UI */
.navbar-sidebar {
  background-color: var(--ifm-color-home-elevation-00);
  width: 100%;
  transition: opacity ease-in-out;
  transition-duration: 280ms;
}

.homepage .navbar-sidebar__item.menu:first-child {
  width: 100%;
  overflow: hidden;
}

.homepage .navbar-sidebar__item.menu:nth-child(2) {
  display: none;
}

.navbar-sidebar__item.menu {
  padding-left: 1rem;
  padding-right: 1rem;
}

.navbar-sidebar .menu .menu__link {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 15px;
  color: var(--ifm-color-home-text-primary);
  padding-left: 0.5rem;
  padding-right: 0;
}

.menu__link--sublist {
  line-height: 20px !important;
}

[data-theme='dark'] .elements-container :is(.token.string, .token.function, .token.property) {
  color: var(--ifm-color-primary) !important;
}

.custom_sidebar_menu hr {
  width: 100% !important;
  margin: 26.4px !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.navbar-sidebar__brand {
  height: 64px;
  margin-bottom: 20px;
}

.navbar__inner .custom_sidebar_menu {
  display: none;
}

.custom_sidebar_menu {
  font-size: 16px !important;
}

[data-theme='dark'] .custom_sidebar_menu {
  color: #c1c1c1 !important;
}

@media (min-width: 640px) {

  .navbar-sidebar__brand,
  .navbar-sidebar__item.menu {
    padding-left: 40px;
    padding-right: 40px;
  }
}

@media (min-width: 768px) {
  .navbar-sidebar__brand {
    height: 88px;
  }

  .navbar-sidebar__brand,
  .navbar-sidebar__item.menu {
    padding-left: 48px;
    padding-right: 48px;
  }

  .navbar-sidebar__brand .navbar__logo {
    height: 3rem;
    width: 220px;
  }
}

